--- a/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/styles.css
+++ b/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/styles.css
@@ -65,7 +65,6 @@ a:hover, a:active {
 .mainHeader nav {
 	background: #666;
 	font-size: 1.143em;
-	height: 40px;
 	line-height: 30px;
 	margin: 0 auto 30px auto;
 	text-align: center;
@@ -77,10 +76,12 @@ a:hover, a:active {
 .mainHeader nav ul {
 	list-style: none; 
 	margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .mainHeader nav ul li {
-	float: left; 
+    float: left;
 	display: inline; 
 }
 	
