--- a/Practice/02HTML-CSS-Exam-7-July-2014/Problem-1-IT-News/styles/styles.scss
+++ b/Practice/02HTML-CSS-Exam-7-July-2014/Problem-1-IT-News/styles/styles.scss
@@ -10,7 +10,7 @@ body {
       box-shadow: 3px 3px 3px #dcdcdc;
       margin: 5px;
       header {
-        h1 {
+        h2 {
           font-size: 13px;
           margin: 10px 10px 0 10px;
           a {
@@ -21,22 +21,20 @@ body {
             text-decoration: underline;
           }
         }
-        time {
+        div {
           padding: 0;
           font-size: 10px;
           margin: 0 10px;
         }
       }
-      article {
-        img {
-          float: left;
-          margin: 10px;
-        }
-        p {
-          width: 280px;
-          margin: 10px;
-          font-size: 13px;
-        }
+      img {
+        float: left;
+        margin: 10px;
+      }
+      p {
+        width: 280px;
+        margin: 10px;
+        font-size: 13px;
       }
     }
   }
