Web Fundamentals Practice

--- a/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/responsive.css
+++ b/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/responsive.css
@@ -22,6 +22,20 @@
     }
     .mainContent {
         display: flex;
+        flex-wrap: wrap;
     }
+    .content {
+        width: 100%;
+    }
+    .top-sidebar {
+        margin: 10px 0;
+    }
+    .middle-sidebar {
+        margin: 0;
+    }
+    .bottom-sidebar {
+        margin: 10px 0;
+    }
+
 
 }
