--- a/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/styles.css
+++ b/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/styles.css
@@ -157,40 +157,39 @@ a:hover, a:active {
 /* ===========================
    ======== Sidebar ========== 
    =========================== */
+.aside {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
 
 .top-sidebar {
-	width: 24%;
-	float: left;
-	margin-left: 2%;
+	margin-left: 10px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;	
-	background-color: #FFF;	
-	padding: 2% 3%;
-	margin-bottom: 2%;
+	-webkit-border-radius: 5px;
+	background-color: #FFF;
+    padding: 10px 15px;
+	margin-bottom: 10px;
 }
 
 .middle-sidebar {
-	width: 24%;
-	float: left;
-	margin-left: 2%;
+	margin-left: 10px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;	
-	background-color: #FFF;	
-	padding: 2% 3%;
-	margin-bottom: 2%;
+	-webkit-border-radius: 5px;
+	background-color: #FFF;
+	padding: 10px 15px;
+	margin-bottom: 10px;
 }
 
 .bottom-sidebar {
-	width: 24%;
-	float: left;
-	margin-left: 2%;
+	margin-left: 10px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;	
-	background-color: #FFF;	
-	padding: 2% 3%;
+	-webkit-border-radius: 5px;
+	background-color: #FFF;
+    padding: 10px 15px;
 }
 
 /* ===========================
