--- a/Practice/02HTML-CSS-Exam-7-July-2014/Problem-3-Contact-Form/styles/styles.scss
+++ b/Practice/02HTML-CSS-Exam-7-July-2014/Problem-3-Contact-Form/styles/styles.scss
@@ -5,58 +5,91 @@
 body {
   font-family: Yanone Kaffeesatz Regular, Arial, sans-serif;
   background-image: url("../images/form-background.png");
-  #envelope-top {
-    position: absolute;
-    left: 430px;
-    top: 200px;
-  }
-  #envelope-bottom {
-    position: absolute;
-    top: 385px;
-    left: 430px;
-    z-index: 1;
-  }
-  form {
-    width: 420px;
-    margin: 0 auto;
-    header {
-      h1 {
-        text-align: center;
-        font-size: 40px;
-        color: #7d7974;
-      }
-    }
+  main {
+    position: relative;
     section {
-      width: 400px;
-      height: 400px;
-      padding: 20px;
-      position: relative;
-      background-image: url("../images/letter-background.png");
-      h2 {
-        margin: 10px 0;
-        color: #7d7974;
+      &:first-child {
+        background: url("../images/envelope-top.png") no-repeat center bottom;
+        width: 600px;
+        margin: 0 auto;
       }
-      label {
-        color: #b3aca2;
-        text-transform: uppercase;
+      &:last-child {
+        background: url("../images/envelope-bottom.png") no-repeat center top;
+        width: 600px;
+        height: 300px;
+        margin: -133px auto 0 auto;
       }
-      #message {
-        width: 100%;
-        height: 60px;
-        border: 1px solid #e3dcd1;
-        border-radius: 5px;
+      header {
+        h1 {
+          text-align: center;
+          font-size: 40px;
+          color: #7d7974;
+        }
       }
-      input {
-        width: 100%;
-        height: 30px;
-        border: 1px solid #e3dcd1;
-        border-radius: 5px;
-      }
-      div {
-        width: 100% ;
-        text-align: center;
-        button {
-          margin: 10px;
+      form {
+        width: 400px;
+        height: 375px;
+        margin: 0 auto;
+        padding: 20px;
+        background-image: url("../images/letter-background.png");
+        h2 {
+          margin: 10px 0 0 0;
+          color: #7d7974;
+        }
+        label {
+          color: #b3aca2;
+          text-transform: uppercase;
+        }
+        #message {
+          font-family: Helvetica, Arial, serif;
+          width: 100%;
+          height: 60px;
+          background: transparent;
+          border: 1px solid #e3dcd1;
+          border-radius: 5px;
+        }
+        #message:focus {
+          background: #ffffff;
+          outline: none;
+        }
+        #message:active {
+          outline: none;
+        }
+        input {
+          font-family: Helvetica, Arial, serif;
+          width: 100%;
+          height: 30px;
+          background: transparent;
+          border: 1px solid #e3dcd1;
+          border-radius: 5px;
+        }
+        input:focus {
+          background: #ffffff;
+          outline: none;
+        }
+        input:active {
+          outline: none;
+        }
+        div {
+          width: 100% ;
+          text-align: center;
+          button {
+            font-family: Yanone Kaffeesatz Regular, Arial, sans-serif;;
+            font-size: 22px;
+            color: #7d7974;
+            margin-top: 10px;
+            padding: 5px 10px;
+            background: transparent;
+            border: none;
+          }
+          button:hover {
+            color: #445d71;
+            background-color: #bbc9cf;
+            border-radius: 5px;
+          }
+          button:focus {
+            outline: none;
+          }
         }
       }
     }
