--- a/Practice/04HTML-CSS-Exam-2-Sept-2014/Problem-2-Corporate-Site/styles/styles.css
+++ b/Practice/04HTML-CSS-Exam-2-Sept-2014/Problem-2-Corporate-Site/styles/styles.css
@@ -6,8 +6,20 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: space-between; }
-    body header a img {
-      margin: 10px; }
+    body header .tilt {
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+      body header .tilt img {
+        margin: 10px; }
+    body header .tilt:hover {
+      -webkit-transform: rotate(-5deg);
+      -moz-transform: rotate(-5deg);
+      -o-transform: rotate(-5deg);
+      -ms-transform: rotate(-5deg);
+      transform: rotate(-5deg); }
     body header nav ul {
       list-style: none;
       display: flex;
@@ -50,7 +62,8 @@ body {
         font-size: 18px;
         border: 1px solid #ffffff;
         border-radius: 5px;
-        background-color: transparent; }
+        background-color: transparent;
+        cursor: pointer; }
       body #top #frame button:hover {
         background-color: rgba(0, 0, 0, 0.3); }
       body #top #frame button:focus {
@@ -90,7 +103,8 @@ body {
       background: url("../images/shopping-icon.png") no-repeat;
       background-size: 15%; }
     body #bottom article:hover {
-      background-color: #f2f2f2; }
+      background-color: #f2f2f2;
+      cursor: pointer; }
       body #bottom article:hover a {
         text-decoration: underline; }
   body footer {
