--- a/Homework/03PHPWorkingWithForms/01PrintTags/styles/styles.css
+++ b/Homework/03PHPWorkingWithForms/01PrintTags/styles/styles.css
@@ -1,7 +1,7 @@
 body main {
   margin: 10px; }
   body main form section h1 {
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px; }
   body main form section #tags {
     width: 200px; }
