--- a/Homework/03PHPWorkingWithForms/01PrintTags/styles/styles.scss
+++ b/Homework/03PHPWorkingWithForms/01PrintTags/styles/styles.scss
@@ -4,7 +4,7 @@ body {
     form {
       section {
         h1 {
-          font-weight: normal;
+          font-weight: 400;
           font-size: 18px;
         }
         #tags {
