--- a/Homework/03PHPWorkingWithForms/05CVGenerator/styles/styles.scss
+++ b/Homework/03PHPWorkingWithForms/05CVGenerator/styles/styles.scss
@@ -1,1 +1,18 @@
-//TODO
+body {
+  .left {
+    margin: 10px;
+    width: 45%;
+    float: left;
+  }
+  .right {
+    margin-left: 50px;
+    float: left;
+    width: 45%;
+    h1 {
+      margin-top: 0;
+    }
+    table, th, td {
+      border: 1px solid #000000;
+    }
+  }
+}
