--- a/Homework/04-JavaScript-Design-Patterns-Homework/01-TODO-List-Module/styles/style.scss
+++ b/Homework/04-JavaScript-Design-Patterns-Homework/01-TODO-List-Module/styles/style.scss
@@ -1,20 +1,50 @@
 body {
-  #container {
-    margin: 20px auto;
-    width: 500px;
-    border: 1px solid black;
+  #listWrapper {
+    width: 600px;
+    margin: 0 auto;
+    padding: 10px;
+    border: 2px solid black;
     h1 {
       text-align: center;
+      font-size: 2rem;
     }
-    #inner-container {
-      margin: 10px;
+    #sectionWrapper {
+      padding: 5px;
+      margin: 15px;
       border: 1px solid black;
-    }
-    form {
-      margin: 10px;
-      button {
-        margin-left: 10px;
+      section {
+        margin: 5px;
+        padding: 5px;
+        .listContainer {
+          border: 1px solid black;
+          padding: 10px;
+          margin-bottom: 5px;
+          h2 {
+            text-align: right;
+            margin: 0;
+          }
+          div {
+            margin: 3px 0;
+            input[type='checkbox']:checked + label {
+              background-color: lightgreen;
+            }
+            label {
+              display: inline-block;
+              border-bottom: 1px solid black;
+              width: 90%;
+              height: 100%;
+            }
+          }
+        }
+        input[name='itemName'], button[name='addItemButton'] {
+          position: relative;
+          left: 335px;
+          margin: 2px;
+        }
       }
+    }
+    input, button {
+      margin: 10px;
     }
   }
 }
