--- a/Homework/01-Introduction-to-AngularJS-Homework/03-Bind-Image-Source-to-Text-Box/templates/home-view.html
+++ b/Homework/01-Introduction-to-AngularJS-Homework/03-Bind-Image-Source-to-Text-Box/templates/home-view.html
@@ -1,5 +1,9 @@
 <h2>Welcome to live image viewer</h2>
 
-<label for="image-address">Please fill valid image address</label>
-<input id="image-address" type="text" style="width: 500px" ng-model="picture.address"/>
-<div><img ng-src="{{picture.address}}" /></div>
+<form name="imageForm">
+    <label for="image-address">Please fill valid image address</label>
+    <input id="image-address" type="text" name="imageAddress" required ng-pattern="regex" style="width: 500px" ng-model="picture.address"/>
+</form>
+<div>
+    <img ng-src="{{picture.address}}" ng-hide="imageForm.imageAddress.$error.pattern || imageForm.imageAddress.$error.required" />
+</div>
