--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
@@ -1,27 +1,36 @@
 body {
-  .video_container {
+  .add {
     display: inline-block;
-    margin: 10px;
-    width: 350px;
-    border: 1px solid black;
-    border-radius: 10px;
-    img {
-      width: 150px;
-      height: 150px;
+    .add_video {
+      margin: 20px;
+      label, input {
+        margin: 10px;
+        padding: 3px;
+      }
     }
   }
-  .comments_container {
-    margin: 5px;
-    padding: 5px;
-    width: 250px;
-    border: 1px solid black;
-    border-radius: 5px;
+  .filter {
+    display: inline-block;
   }
-  .add_video {
-    margin: 20px;
-    label, input {
+  .view {
+    display: block;
+    .video_container {
+      display: inline-block;
       margin: 10px;
-      padding: 3px;
+      width: 350px;
+      border: 1px solid black;
+      border-radius: 10px;
+      img {
+        width: 150px;
+        height: 150px;
+      }
+    }
+    .comments_container {
+      margin: 5px;
+      padding: 5px;
+      width: 250px;
+      border: 1px solid black;
+      border-radius: 5px;
     }
   }
 }
