Fix custom filter by date

--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.css
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.css
@@ -10,6 +10,7 @@ body .filter {
 body .view {
   display: block; }
   body .view .video_container {
+    vertical-align: top;
     display: inline-block;
     margin: 10px;
     width: 350px;
