--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
@@ -15,6 +15,7 @@ body {
   .view {
     display: block;
     .video_container {
+      vertical-align: top;
       display: inline-block;
       margin: 10px;
       width: 350px;
