--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
@@ -1,37 +1,56 @@
 body {
-  .add {
-    display: inline-block;
-    .add_video {
-      margin: 20px;
-      label, input {
-        margin: 10px;
-        padding: 3px;
-      }
+  .wrapper {
+    margin: 0 auto;
+    width: 1200px;
+    .nav {
+      margin: 10px;
+      padding: 10px;
     }
-  }
-  .filter {
-    display: inline-block;
-  }
-  .view {
-    display: block;
-    .video_container {
-      vertical-align: top;
+    .add {
       display: inline-block;
       margin: 10px;
+      padding: 10px;
+      width: 700px;
+      border: 1px solid black;
+      border-radius: 10px;
+      .add_video {
+        margin: 20px;
+        label, input {
+          margin: 10px;
+          padding: 3px;
+        }
+      }
+    }
+    .filters {
+      float: right;
+      vertical-align: top;
+      margin: 10px;
+      padding: 10px;
       width: 350px;
       border: 1px solid black;
       border-radius: 10px;
-      img {
-        width: 150px;
-        height: 150px;
-      }
     }
-    .comments_container {
-      margin: 5px;
-      padding: 5px;
-      width: 250px;
-      border: 1px solid black;
-      border-radius: 5px;
+    .view {
+      display: block;
+      .video_container {
+        vertical-align: top;
+        display: inline-block;
+        margin: 10px;
+        width: 335px;
+        border: 1px solid black;
+        border-radius: 10px;
+        img {
+          width: 150px;
+          height: 150px;
+        }
+      }
+      .comments_container {
+        margin: 5px;
+        padding: 5px;
+        width: 250px;
+        border: 1px solid black;
+        border-radius: 5px;
+      }
     }
   }
 }
