--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/templates/home-view.html
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/templates/home-view.html
@@ -1,3 +1,1 @@
-<h2>Welcome to our video system</h2>
-
-<div>{{message}} <a href="#/videos">videos</a></div>
+<h1>Welcome to SoftUni's <a href="#/videos">Video system</a></h1>
