--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.scss
@@ -22,7 +22,7 @@ body {
       }
     }
     .filters {
-      float: right;
+      display: inline-block;
       vertical-align: top;
       margin: 10px;
       padding: 10px;
