--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.css
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/styles/style.css
@@ -17,7 +17,7 @@ body .wrapper {
         margin: 10px;
         padding: 3px; }
   body .wrapper .filters {
-    float: right;
+    display: inline-block;
     vertical-align: top;
     margin: 10px;
     padding: 10px;
