Include notify service

--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -1,7 +1,7 @@
 <div ng-include="'templates/header-view.html'"></div>
 
 <!-- Sign Up -->
-<div class="wrapper style4">
+<div class="wrapper style1">
     <article id="signUp" class="container 75%">
         <header>
             <h2>Sign Up</h2>
@@ -33,7 +33,7 @@
                                     <input type="text" name="name" id="name" placeholder="Name"/>
                                 </div>
                                 <div class="6u radio">
-                                    <legend>Gender</legend>
+                                    <legend>Gender:</legend>
                                     <label for="male">Male</label>
                                     <input type="radio" name="gender" id="male"/>
                                     <label for="male">Female</label>
