Implement login and logout

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -165,11 +165,11 @@
 /* Nav                                                                           */
 /*********************************************************************************/
 
-	#nav
+	.nav
 	{
 	}
 	
-		#nav a
+		.nav a
 		{
 			padding: 0.5em;
 		}
