--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700');
 @import url('font-awesome.min.css');
 
@@ -33,7 +33,7 @@
 			-ms-animation: none !important;
 			animation: none !important;
 		}
-	
+
 	a
 	{
 		color: #43B3E0;
@@ -44,7 +44,7 @@
 		-ms-transition: color .2s ease-in-out;
 		transition: color .2s ease-in-out;
 	}
-	
+
 		a:hover
 		{
 			color: #43bff0 !important;
@@ -72,7 +72,7 @@
 		top: 0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	sup
 	{
 		position: relative;
@@ -86,33 +86,33 @@
 		padding: 1em 0 1em 1.5em;
 		font-style: italic;
 	}
-				
+
 	h1, h2, h3, h4, h5, h6
 	{
 		color: #3e3e3e;
 	}
-	
+
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
 		{
 			text-decoration: none;
 			color: inherit;
 		}
-	
+
 	h2, h3, h4, h5, h6
 	{
 		font-weight: 700;
 	}
-	
+
 	h1
 	{
 		font-weight: 300;
 	}
-	
+
 		h1 strong
 		{
 			font-weight: 700;
 		}
-	
+
 	em, i
 	{
 		font-style: italic;
@@ -122,28 +122,28 @@
 	{
 		clear: both;
 	}
-	
+
 	hr
 	{
 		border: 0;
 		border-top: solid 1px #444;
 		border-top-color: rgba(0,0,0,0.35);
-		box-shadow: 0px 1px 0px 0px rgba(255,255,255,0.1);
+		box-shadow: 0 1px 0 0 rgba(255,255,255,0.1);
 		height: 1px;
 		margin: 3em 0 4em 0;
 	}
-	
+
 	p, ul, ol, dl, table
 	{
 		margin-bottom: 2em;
 	}
 
 	/* Form */
-	
+
 		form
 		{
 		}
-		
+
 			form label
 			{
 				color: #3e3e3e;
@@ -156,7 +156,7 @@
             {
                 outline: 0;
             }
-		
+
 			form input[type=text],
 			form input[type=email],
 			form input[type=password],
@@ -165,7 +165,6 @@
 			{
 				-webkit-appearance: none;
 				display: block;
-				border: 0;
 				padding: 0.75em;
 				font-size: 1em;
 				border-radius: 8px;
@@ -209,7 +208,7 @@
                 float: left;
                 margin: 1.2em 5px;
             }
-			
+
 			form .formerize-placeholder
 			{
 				color: #555 !important;
@@ -241,12 +240,12 @@
 			}
 
 	/* Tables */
-	
+
 		table
 		{
 			width: 100%;
 		}
-		
+
 			table.default
 			{
 				width: 100%;
@@ -261,12 +260,12 @@
 					{
 						border-top: 0;
 					}
-			
+
 				table.default td
 				{
 					padding: 0.5em 1em 0.5em 1em;
 				}
-				
+
 				table.default th
 				{
 					text-align: left;
@@ -274,29 +273,29 @@
 					font-weight: 600;
 					margin: 0 0 1em 0;
 				}
-			
+
 				table.default thead
 				{
 					background: #4f4f4f;
 					color: #fff;
 				}
-				
+
 				table.default tfoot
 				{
 				}
-				
+
 				table.default tbody
 				{
 				}
 
 	/* Section/Article */
-	
+
 		section,
 		article
 		{
 			margin-bottom: 3em;
 		}
-		
+
 		section > :last-child,
 		article > :last-child
 		{
@@ -316,7 +315,7 @@
 			display: inline-block;
 			position: relative;
 		}
-		
+
 			.image img
 			{
 				display: block;
@@ -328,20 +327,20 @@
 				display: block;
 				width: 100%;
 			}
-			
+
 			.image.featured
 			{
 				display: block;
 				width: 100%;
 				margin: 0 0 2em 0;
 			}
-			
+
 			.image.left
 			{
 				float: left;
 				margin: 0 2em 2em 0;
 			}
-			
+
 			.image.centered
 			{
 				display: block;
@@ -355,7 +354,7 @@
 				}
 
 	/* Button */
-	
+
 		input[type="button"],
 		input[type="submit"],
 		input[type="reset"],
@@ -395,7 +394,7 @@
 				background-color: #43bff0;
 				color: #fff !important;
 			}
-			
+
 			input[type="button"]:active,
 			input[type="submit"]:active,
 			input[type="reset"]:active,
@@ -404,7 +403,7 @@
 				background-color: #3BA8D3;
 				top: 1px;
 			}
-		
+
 			input[type="button"].alt,
 			input[type="submit"].alt,
 			input[type="reset"].alt,
@@ -422,7 +421,7 @@
 					background-color: #4f4f4f;
 					color: #fff !important;
 				}
-				
+
 				input[type="button"].alt:active,
 				input[type="submit"].alt:active,
 				input[type="reset"].alt:active,
@@ -430,7 +429,7 @@
 				{
 					background-color: #3f3f3f;
 				}
-		
+
 	/* List */
 
 		ul
@@ -442,18 +441,18 @@
 				list-style: disc;
 				padding-left: 1em;
 			}
-			
+
 				ul.default li
 				{
 					padding-left: 0.5em;
 				}
-				
+
 			ul.social
 			{
 				cursor: default;
 				margin: 0;
 			}
-			
+
 				ul.social li
 				{
 					position: relative;
@@ -525,7 +524,7 @@
 						{
 							top: -5px;
 						}
-						
+
 							ul.social li a:hover:before
 							{
 								background-color: transparent;
@@ -540,7 +539,7 @@
 					display: inline-block;
 					margin: 0 0 0 1em;
 				}
-				
+
 					ul.actions li:first-child
 					{
 						margin-left: 0;
@@ -548,7 +547,7 @@
 
 		ol
 		{
-		}	
+		}
 
 			ol.default
 			{
@@ -562,7 +561,7 @@
 				}
 
 	/* Box */
-			
+
 		.box
 		{
 			background: #fff;
@@ -589,7 +588,7 @@
 			-webkit-font-smoothing:antialiased;
 			-moz-osx-font-smoothing:grayscale;
 		}
-		
+
 		.icon > .label {
 			display: none;
 		}
@@ -601,7 +600,7 @@
 			margin: 0 0 1.5em 0;
 			cursor: default;
 		}
-		
+
 			.icon.featured:before
 			{
 				font-size: 6em;
@@ -627,13 +626,13 @@
 			background-image: none;
 			background-color: #fff;
 		}
-		
+
 		.wrapper.style2
 		{
 			background-color: #fafafa;
 			text-shadow: 1px 1px 0px #fff;
 		}
-		
+
 		.wrapper.style3
 		{
 			background-color: #f4f4f4;
@@ -647,11 +646,11 @@
 			text-shadow: -1px -1px 0px #181818;
 		}
 
-			.wrapper.style4 h1, 
-			.wrapper.style4 h2, 
-			.wrapper.style4 h3, 
-			.wrapper.style4 h4, 
-			.wrapper.style4 h5, 
+			.wrapper.style4 h1,
+			.wrapper.style4 h2,
+			.wrapper.style4 h3,
+			.wrapper.style4 h4,
+			.wrapper.style4 h5,
 			.wrapper.style4 h6
 			{
 				color: #fff;
@@ -673,12 +672,12 @@
 			{
 				background: #252525;
 			}
-		
+
 /*********************************************************************************/
 /* Nav                                                                           */
 /*********************************************************************************/
 
-	#nav
+	.nav
 	{
 		background-color: #282828;
 		text-align: center;
@@ -689,18 +688,18 @@
 		z-index: 10000;
 		cursor: default;
 	}
-	
-		#nav ul
+
+		.nav ul
 		{
 			margin-bottom: 0;
 		}
-	
-		#nav li
+
+		.nav li
 		{
 			display: inline-block;
 		}
-		
-		#nav a
+
+		.nav a
 		{
 			position: relative;
 			display: block;
@@ -708,13 +707,13 @@
 			text-decoration: none;
 			outline: 0;
 		}
-		
-			#nav a:hover
+
+			.nav a:hover
 			{
 				color: #fff !important;
 			}
-			
-			#nav a.active:before
+
+			.nav a.active:before
 			{
 				content: '';
 				display: block;
@@ -726,7 +725,7 @@
 				border-right: solid 0.75em transparent;
 				border-top: solid 0.6em #282828;
 			}
-			
+
 /*********************************************************************************/
 /* Articles                                                                      */
 /*********************************************************************************/
@@ -748,7 +747,7 @@
 		#top p
 		{
 		}
-	
+
 			#top p a
 			{
 				color: inherit;
@@ -762,7 +761,7 @@
 	{
 		color: #666;
 	}
-	
+
 		#copyright a
 		{
 			color: inherit;
@@ -773,7 +772,7 @@
 			-ms-transition: color .2s ease-in-out;
 			transition: color .2s ease-in-out;
 		}
-		
+
 		#copyright a:hover
 		{
 			color: #777;
