--- a/templates/header-view.html
+++ b/templates/header-view.html
@@ -1,7 +1,14 @@
-<!-- Nav -->
-<nav id="nav">
+<!-- Guest Nav -->
+<nav class="nav" ng-if="isNotLoggedIn">
     <ul class="container">
         <li><a href="#/login">Log In</a></li>
         <li><a href="#/signup">Sign Up</a></li>
+    </ul>
+</nav>
+
+<!-- User Nav-->
+<nav class="nav" ng-if="isLoggedIn">
+    <ul class="container">
+        <li><a href="" ng-click="logout()">Logout</a></li>
     </ul>
 </nav>
