--- a/templates/header-view.html
+++ b/templates/header-view.html
@@ -9,6 +9,7 @@
 <!-- User Nav-->
 <nav class="nav" ng-if="isLoggedIn">
     <ul class="container">
-        <li><a href="" ng-click="logout()">Logout</a></li>
+        <li><a href="" class="icon fa-newspaper-o"></a></li>
+        <li><a href="" class="icon fa-sign-out" ng-click="logout()"></a></li>
     </ul>
 </nav>
