--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -1,7 +1,7 @@
 <div ng-include="'templates/header-view.html'"></div>
 
-<!-- Home -->
-<div class="wrapper style1 first">
+<!-- Welcome -->
+<div class="wrapper style1 first" ng-if="isNotLoggedIn">
     <article class="container" id="top">
         <div class="row">
             <div class="4u">
@@ -18,5 +18,19 @@
         </div>
     </article>
 </div>
+
+<!-- News Feed -->
+<div class="wrapper style1 first" ng-if="isLoggedIn">
+    <article class="container">
+        <div class="row">
+            <div class="12u">
+                <header>
+                    <h1>News Feed</h1>
+                </header>
+            </div>
+        </div>
+    </article>
+</div>
+
 
 <div ng-include="'templates/footer-view.html'"></div>
