Refactor security when log in

--- a/templates/header-view.html
+++ b/templates/header-view.html
@@ -1,5 +1,5 @@
 <!-- Guest Nav -->
-<nav class="nav" ng-if="isNotLoggedIn">
+<nav class="nav" ng-if="!isLoggedIn">
     <ul class="container">
         <li><a href="#/login">Log In</a></li>
         <li><a href="#/signup">Sign Up</a></li>
