--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -1,7 +1,7 @@
 <div ng-include="'templates/header-view.html'"></div>
 
 <!-- Welcome -->
-<div class="wrapper style1 first" ng-if="isNotLoggedIn">
+<div class="wrapper style1 first" ng-if="!isLoggedIn">
     <article class="container" id="top">
         <div class="row">
             <div class="4u">
