--- a/templates/login-view.html
+++ b/templates/login-view.html
@@ -24,7 +24,7 @@
                             <div class="row 200%">
                                 <div class="12u">
                                     <ul class="actions">
-                                        <li><input type="button" value="Log In" ng-click="validateWhenLogIn()"
+                                        <li><input type="button" value="Log In" ng-click="login()"
                                                    ng-disabled="loginForm.username.$error.required ||
                                                    loginForm.password.$error.required" /></li>
                                         <li><input type="button" ng-click="cancel()" value="Cancel" class="alt"/></li>
