--- a/templates/signup-view.html
+++ b/templates/signup-view.html
@@ -50,7 +50,7 @@
                             <div class="row 200%">
                                 <div class="12u">
                                     <ul class="actions">
-                                        <li><input type="button" value="Sign Up" ng-click="validateWhenSignUp()"
+                                        <li><input type="button" value="Sign Up" ng-click="register()"
                                                    ng-disabled="registerForm.username.$error.required || registerForm.email.$error.required ||
                                                    registerForm.password.$error.required || registerForm.confirmPassword.$error.required ||
                                                    registerForm.name.$error.required"/></li>
