Test HTML5 mode

--- a/templates/change-password-view.html
+++ b/templates/change-password-view.html
@@ -1,6 +1,6 @@
 <div ng-include="'templates/header-view.html'"></div>
 
-<!-- News Feed -->
+<!-- Change Password -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
     <article id="signUp" class="container 75%">
         <header>
