--- a/templates/edit-profile-view.html
+++ b/templates/edit-profile-view.html
@@ -6,7 +6,8 @@
         <div class="row">
             <div class="4u">
                 <span class="image fit"><img src="images/logo.jpg" alt=""/></span>
-                <input type="file"/>
+                <label for="file-upload" class="button browse">Browse</label>
+                <input id="file-upload" type="file"/>
             </div>
             <div class="8u">
                 <header>
