Create file reader service and file select directive

--- a/templates/change-password-view.html
+++ b/templates/change-password-view.html
@@ -2,9 +2,9 @@
 
 <!-- Change Password -->
 <div class="wrapper style1 first" ng-if="isLoggedIn">
-    <article id="signUp" class="container 75%">
+    <article id="changePassword" class="container 75%">
         <header>
-            <h2>Change Password</h2>
+            <h1>Change Password</h1>
         </header>
         <div>
             <div class="row">
@@ -60,8 +60,6 @@
                 </div>
             </div>
         </div>
-
-
     </article>
 </div>
 
