--- a/templates/login-view.html
+++ b/templates/login-view.html
@@ -25,8 +25,7 @@
                                 <div class="12u">
                                     <ul class="actions">
                                         <li><input type="button" value="Log In" ng-click="login()"
-                                                   ng-disabled="loginForm.username.$error.required ||
-                                                   loginForm.password.$error.required" /></li>
+                                                   ng-disabled="!loginForm.$valid" /></li>
                                         <li><input type="button" ng-click="cancel()" value="Cancel" class="alt"/></li>
                                     </ul>
                                 </div>
