--- a/templates/edit-profile-view.html
+++ b/templates/edit-profile-view.html
@@ -5,14 +5,40 @@
     <article class="container" id="top">
         <div class="row">
             <div class="4u">
-                <span class="image fit"><img src="images/logo.jpg" alt=""/></span>
+                <span class="image fit"><img ng-src="{{editProfileData.facePicture}}"/></span>
                 <label for="file-upload" class="button browse">Browse</label>
-                <input id="file-upload" type="file"/>
+                <input id="file-upload" type="file" ng-file-select="onFileSelect($files)" ng-model="editProfileData.facePicture"/>
             </div>
             <div class="8u">
                 <header>
                     <h1>Edit Profile</h1>
                 </header>
+                <form name="registerForm">
+                    <div class="row">
+                        <div class="6u">
+                            <input type="text" name="username" id="username" placeholder="Username"
+                                   required ng-model="editProfileData.username"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="6u">
+                            <input type="text" name="email" id="email" placeholder="Email"
+                                   required ng-model="editProfileData.email"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="6u radio">
+                            <legend>Gender:</legend>
+                            <label for="male">Male</label>
+                            <input type="radio" name="gender" id="male" value="male" ng-model="editProfileData.gender"/>
+                            <label for="female">Female</label>
+                            <input type="radio" name="gender" id="female" value="female"
+                                   ng-model="editProfileData.gender"/>
+                            <label for="other">Other</label>
+                            <input type="radio" name="gender" id="other" value="other" ng-model="editProfileData.gender"/>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </article>
